1.1.30
	+ Added widget to manage group belonging from Edit User page
	+ Fixed backup/restore problem with paswords and given/last names
	+ Changed the way users are stored in LDAP, added givenName in addition
	to sn, now cn=givenName+sn instead of cn=uid, this fixes a
	incompatibility bug with eGroupware
	+ In the Edit User interface now Name and Last name are separate
	fields
1.1.20
	New release
1.1.10
	+ Make slapd listen only on 127.0.0.1
1.1
	+ Added bind v2 compability needed by squid auth, slapd conf
	regenerated and daemon restarted in postinst to commit possibles
	changes in configuration
	+ Added group model
	+ Use the new ids() and row() API to optimize the management of hundreds of
	users
	+ Allow dashes in user and group names
	+ Initial release of UserCorner which allow users to change their password
	+ Store multiple password hashes and scrap clear text passwords
0.12.100
	+ Restore backup is more robust: inexistent users in a group are
	ignored
	+ Make and restore backup more robust: removed slapd.conf
	parameters in both slapadd and slapcat invokations, so we can use
	the module with sldap with configuration in the directory itself
0.12.99
	+ New release
0.12.1
	+ Bugfix: Remove eBox system users when restoring backup. This solves 
	  an issue restoring backups from 0.12
0.12
	+ Use the new EBox::Model::Row api
	+ Check if there is any added user and show a message
	  in case there isn't any.
	+ Restore users reading from ldiff and adding them through
	  eBox API
	+ Set password-hash in slapd.conf to make password changes from samba sync
	  the user password
0.11.101
	+ New release
0.11.100
	+ onInstall() functionality moved to migration script
	+ Fixed several typos
0.11.99
	+ Remove use of Apache::Singleton
0.11.3
	+ Check used uid's on every posixAccount object under dc=ebox, 
	  instead of only under ou=Users,dc=ebox. This solves nasty issues
	  with Samba PDC when adding machines and creating users with 
	  repeated uid
0.11.2