@@ -6,6 +6,7 @@
 	incompatibility bug with eGroupware
 	+ In the Edit User interface now Name and Last name are separate
 	fields
+	+ Usercorner web server certificate can be changed via the CA module
 1.1.20
 	New release
 1.1.10
